--- a/part10.html
+++ b/part10.html
@@ -10,7 +10,7 @@
   <h1>click below</h1>
   <a href="https://www.youtube.com//" target="_blank">Click_Me</a>
   <!--sakib is the best lover-->
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit blanditiis, hic eum consequuntur deserunt quibusdam sequi pariatur, voluptatibus ut, ipsum repudiandae laudantium cum sint perspiciatis, a nobis expedita! Voluptatem, similique. Dolor repellendus numquam sequi autem labore modi ab dolore soluta delectus eum magnam id nostrum, dolores sit nobis corporis incidunt? Saepe similique magnam earum, vero explicabo natus nulla, tenetur rerum. In omnis libero ea fuga excepturi voluptatibus. Optio impedit eos assumenda perferendis ipsa nesciunt cumque neque hic, repellendus, aperiam molestiae maxime cum quae nihil esse explicabo. Unde ipsum voluptatem qui! In, cum officia obcaecati amet, voluptatum id repudiandae incidunt recusandae!</p>
+  <p> consectetur adipisicing elit. Odit blanditiis, hic eum consequuntur deserunt quibusdam sequi pariatur, voluptatibus ut, ipsum repudiandae laudantium cum sint perspiciatis, a nobis expedita! Voluptatem, similique. Dolor repellendus numquam sequi autem labore modi ab dolore soluta delectus eum magnam id nostrum, dolores sit nobis corporis incidunt? Saepe similique magnam earum, vero explicabo natus nulla, tenetur rerum. In omnis libero ea fuga excepturi voluptatibus. Optio impedit eos assumenda perferendis ipsa nesciunt cumque neque hic, repellendus, aperiam molestiae maxime cum quae nihil esse explicabo. Unde ipsum voluptatem qui! In, cum officia obcaecati amet, voluptatum id repudiandae incidunt recusandae!</p>
 
   <!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, modi.</p> -->
 </body>
